[tool.poetry]
name = "pokefight"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
